# forecasting-ore-grade-variability-with-open-geochemistry-and-machine-learning

./: 08_ore_grade_forecasting_blog.md  08_ore_grade_forecasting_blog_linkedin_post.md  08_ore_grade_production.py  08_ore_grade_validation.py  08_ore_grade_visualizations.py  11_ore_grade_ml_production.py  11_ore_grade_ml_validation.py  11_ore_grade_ml_visualizations.py  README.md  article.md  benchmark_rust.py  pyproject.toml
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
