[project]
name = "forecasting-ore-grade-variability-with-open-geochemistry-and-machine-learning"
version = "0.1.0"
description = "Companion code for Medium article: forecasting ore grade variability with open geochemistry and machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "signalplot>=0.1",
    "xgboost>=2.1.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
